--- a/pod2.yml
+++ b/pod2.yml
@@ -7,6 +7,6 @@ spec:
   - name: webserver
     image: nginx:latest
     ports:
-    - containerPost: 80  
+    - containerPort: 80
   - name: webwatcher
     image: afakharany/watcher:latest
