--- a/pod3.yml
+++ b/pod3.yml
@@ -2,6 +2,8 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: pod3
+  labels:
+    app: java-docker-microservice
 spec:
   containers:
   - name: java-docker
