--- a/pod3-service.yml
+++ b/pod3-service.yml
@@ -6,7 +6,7 @@ spec:
   ports:
   - port: 31001
     nodePort: 31002
-    targetPost: nodejs-port
+    targetPort: nodejs-port
     protocol: TCP
   selector:
     app: java-docker-microservice
