Update and rename pod3-service.yml to pod4-service.yml

--- a/pod4-service.yml
+++ b/pod4-service.yml
@@ -9,5 +9,5 @@ spec:
     targetPort: nodejs-port
     protocol: TCP
   selector:
-    app: java-docker-microservice
+    app: helloworld
   type: NodePort
